[gd_scene load_steps=14 format=3 uid="uid://bby5fdbixrjdd"]

[ext_resource type="PackedScene" uid="uid://cwhjfp5mathi3" path="res://Objects/Characters/Player.tscn" id="1_hy1j4"]
[ext_resource type="Script" path="res://Scripts/Components/world.gd" id="1_yfmfk"]
[ext_resource type="FastNoiseLite" uid="uid://6urw3hoiokr1" path="res://Visuals/Noises/ground_noise.tres" id="2_w0y18"]
[ext_resource type="Script" path="res://Scripts/player_camera.gd" id="2_wosy1"]
[ext_resource type="FastNoiseLite" uid="uid://dv6e2e1o60wra" path="res://Worlds/cave_noise.tres" id="3_6pmqa"]
[ext_resource type="FastNoiseLite" uid="uid://bmcmlvgcuvnek" path="res://Worlds/foliage_noise.tres" id="4_4yfdk"]
[ext_resource type="TileSet" uid="uid://cjx0wr5alti0q" path="res://Visuals/TileSets/test_world.tres" id="4_40jkx"]
[ext_resource type="Script" path="res://Scripts/world_gen.gd" id="4_bndg4"]
[ext_resource type="Script" path="res://Scripts/terrain_mod.gd" id="5_voypv"]
[ext_resource type="PackedScene" uid="uid://djaf86d0mkqql" path="res://Visuals/Characters/Enemies/Ground_Enemy_Base/ground_enemy_base.tscn" id="10_vmwny"]
[ext_resource type="PackedScene" uid="uid://pb32h8fuotc8" path="res://Visuals/Characters/Enemies/Flying_Enemy_Base/flying_enemy.tscn" id="11_d5wmv"]
[ext_resource type="PackedScene" uid="uid://d1labbsejmmkq" path="res://Visuals/Particles/breaking_particle.tscn" id="12_x6bu8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uxeqv"]
bg_color = Color(0.172549, 0.533333, 1, 1)

[node name="World" type="Node2D"]
script = ExtResource("1_yfmfk")

[node name="WorldGen" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("4_bndg4")
ground_noise = ExtResource("2_w0y18")
cave_noise = ExtResource("3_6pmqa")
foliage_noise = ExtResource("4_4yfdk")
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Background_Layer" type="TileMapLayer" parent="WorldGen"]
unique_name_in_owner = true
modulate = Color(0.691357, 0.691357, 0.691357, 1)
tile_set = ExtResource("4_40jkx")
collision_enabled = false

[node name="Main_Layer" type="TileMapLayer" parent="WorldGen"]
unique_name_in_owner = true
z_index = 1
tile_set = ExtResource("4_40jkx")

[node name="Foreground_Layer" type="TileMapLayer" parent="WorldGen"]
unique_name_in_owner = true
z_index = 20
tile_set = ExtResource("4_40jkx")
collision_enabled = false

[node name="Player" parent="." instance=ExtResource("1_hy1j4")]
unique_name_in_owner = true
z_index = 2
position = Vector2(0, -12)

[node name="Camera2D" type="Camera2D" parent="." node_paths=PackedStringArray("target")]
offset = Vector2(0, -60)
zoom = Vector2(3, 3)
position_smoothing_speed = 2.0
script = ExtResource("2_wosy1")
target = NodePath("../Player")
smoothing = true

[node name="Terrain_Mod" type="Node2D" parent="." node_paths=PackedStringArray("background_layer", "main_layer", "foreground_layer")]
script = ExtResource("5_voypv")
background_layer = NodePath("../WorldGen/Background_Layer")
main_layer = NodePath("../WorldGen/Main_Layer")
foreground_layer = NodePath("../WorldGen/Foreground_Layer")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
unique_name_in_owner = true

[node name="SkyBox" type="Panel" parent="."]
z_index = -999
offset_left = -123550.0
offset_top = -70561.0
offset_right = 292369.0
offset_bottom = 106318.0
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxFlat_uxeqv")
metadata/_edit_lock_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Time" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 23.0
size_flags_horizontal = 0
text = "00:00"

[node name="GroundEnemy" parent="." instance=ExtResource("10_vmwny")]
position = Vector2(356, -295)

[node name="GroundEnemy2" parent="." instance=ExtResource("10_vmwny")]
position = Vector2(-38, -652)

[node name="GroundEnemy3" parent="." instance=ExtResource("10_vmwny")]
position = Vector2(-609, -397)

[node name="FlyingEnemy" parent="." instance=ExtResource("11_d5wmv")]
position = Vector2(-390, -363)

[node name="FlyingEnemy2" parent="." instance=ExtResource("11_d5wmv")]
position = Vector2(-116, -404)

[node name="FlyingEnemy3" parent="." instance=ExtResource("11_d5wmv")]
position = Vector2(901, -389)

[node name="FlyingEnemy4" parent="." instance=ExtResource("11_d5wmv")]
position = Vector2(2367, -480)

[node name="FlyingEnemy5" parent="." instance=ExtResource("11_d5wmv")]
position = Vector2(-1776, -518)

[node name="Particles" type="Node2D" parent="."]
z_index = 999

[node name="BreakingParticle" parent="Particles" instance=ExtResource("12_x6bu8")]
unique_name_in_owner = true
emitting = false
scale_amount_min = 1.1
scale_amount_max = 2.2
